--- a/myungho/HomeNect/app/src/main/AndroidManifest.xml
+++ b/myungho/HomeNect/app/src/main/AndroidManifest.xml
@@ -5,8 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -23,6 +22,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".ScanWifi" />
+        <activity android:name=".AddGuest"
+            android:theme="@style/Theme.AppCompat.Dialog.Alert"
+            android:windowSoftInputMode="stateAlwaysVisible"></activity>
     </application>
 
 </manifest>
