[명호] retrofit2를 이용하여 Json 형태의 object post기능 추가

--- a/myungho/HomeNect/app/src/main/AndroidManifest.xml
+++ b/myungho/HomeNect/app/src/main/AndroidManifest.xml
@@ -22,9 +22,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".ScanWifi" />
-        <activity android:name=".AddGuest"
+        <activity
+            android:name=".AddGuest"
             android:theme="@style/Theme.AppCompat.Dialog.Alert"
-            android:windowSoftInputMode="stateAlwaysVisible"></activity>
+            android:windowSoftInputMode="stateAlwaysVisible" />
+        <activity
+            android:name=".SSidPwdDialog"
+            android:theme="@style/Theme.AppCompat.Dialog.Alert"
+            android:windowSoftInputMode="stateAlwaysVisible" />
     </application>
 
 </manifest>
