[명호] AddThing 기능 추가(Wifi Scan후 결과에 따라 SSID, PWD 입력 후 http request 혹은 homenect가 주변에 없다는 toast 메시지)

--- a/myungho/HomeNect/app/src/main/AndroidManifest.xml
+++ b/myungho/HomeNect/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ScanWifi" />
+        <activity android:name=".ScanWifi"
+            android:theme="@style/Theme.AppCompat.Dialog.Alert" />
         <activity
             android:name=".AddGuest"
             android:theme="@style/Theme.AppCompat.Dialog.Alert"
