--- a/myungho/HomeNect/app/build.gradle
+++ b/myungho/HomeNect/app/build.gradle
@@ -19,12 +19,24 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url "http://repo.eclipse.org/content/repositories/paho-releases/"
+    }
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    // CMU Spinx
     compile files('libs/pocketsphinx-android-0.8-nolib.jar')
+    // waveform
+    compile('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') {
+        exclude module: 'support-v4'
+    }
+    compile 'com.dnkilic.waveform:waveform:0.9.3'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
@@ -34,5 +46,6 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
     testCompile 'junit:junit:4.12'
 }
