--- a/myungho/HomeNect/app/src/main/AndroidManifest.xml
+++ b/myungho/HomeNect/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -14,15 +19,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".ScanWifi"
-            android:theme="@style/Theme.AppCompat.Dialog.Alert"/>
+        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".ScanWifi"
+            android:theme="@style/Theme.AppCompat.Dialog.Alert" />
         <activity
             android:name=".AddGuest"
             android:theme="@style/Theme.AppCompat.Dialog.Alert"
@@ -31,6 +31,37 @@
             android:name=".SSidPwdDialog"
             android:theme="@style/Theme.AppCompat.Dialog.Alert"
             android:windowSoftInputMode="stateAlwaysVisible" />
+
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
+
+        <activity
+            android:name=".SetThingNameDialog"
+            android:theme="@style/Theme.AppCompat.Dialog.Alert" />
+        <activity android:name=".AddUser" />
+        <activity
+            android:name=".STT.BrokeLockActivity"
+            android:excludeFromRecents="true"
+            android:launchMode="singleInstance"
+            android:taskAffinity="com.capstone.sejong.homenect.brokelock" />
+        <activity
+            android:name=".STT.SttActivity"
+            android:theme="@style/NoTitle1" />
+
+        <service
+            android:name=".STT.SpottingService"
+            android:enabled="true" />
+        <service
+            android:name=".STT.SttService"
+            android:enabled="true" />
+
+        <activity android:name=".SplashActivity" android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
